fix(dropdown): align top to align better
affects: @fremtind/jkl-dropdown

--- a/packages/dropdown/dropdown.scss
+++ b/packages/dropdown/dropdown.scss
@@ -47,7 +47,7 @@ $dropdown-total-height: $label-height + $value-height + $bottom-padding;
 
     &--inline {
         display: inline-block;
-        vertical-align: bottom;
+        vertical-align: top;
     }
 
     & *:focus {
